update my html files

--- a/css_basic/index.html
+++ b/css_basic/index.html
@@ -61,9 +61,13 @@
         </tr>
     </tbody>
    </table>
-    </article>
-    <aside>
-      <p>placeholder to add comment thread later</p>
+    </article style= "flex: 2";overflow-y: auto >
+    <aside style= "flex: 1";overflow-y: auto >
+      <p>In today's digital age, learning how to code is no longer 
+        just for software engineers.
+         Whether you're a teacher, entrepreneur, artist, or student,
+         understanding the fundamentals of programming 
+         can open up a world of opportunities.</p>
     </aside>
    </main>
    <footer>
