update index html file

--- a/css_basic/index.html
+++ b/css_basic/index.html
@@ -61,8 +61,8 @@
         </tr>
     </tbody>
    </table>
-    </article style= "flex: 2";overflow-y: auto >
-    <aside style= "flex: 1";overflow-y: auto >
+    </article>
+    <aside>
       <p>In today's digital age, learning how to code is no longer 
         just for software engineers.
          Whether you're a teacher, entrepreneur, artist, or student,
