--- a/css_basic/tweets.html
+++ b/css_basic/tweets.html
@@ -34,7 +34,11 @@
      <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     </article>
     <aside>
-      <p>placeholder to add comment thread later</p>
+      <p>In today's digital age, learning how to code is no longer 
+        just for software engineers.
+         Whether you're a teacher, entrepreneur, artist, or student,
+         understanding the fundamentals of programming 
+         can open up a world of opportunities.</p>
      </aside>
   </main>
   <footer>
