--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <nav>
-            <img src="https://fakeimg.pl/250x250?text=Sample+Logo" alt="logo">
+            <img src="photos/CSS Advanced/logo.png"alt="logo">
           
             <ul>
                 <li><a href="#">COURSE</a></li>
@@ -32,22 +32,22 @@
                 <h2>Learn from the pros</h2>
                 <div>
                     <div>
-                        <img src="./images/1 (3).png" alt="">
+                        <img src="photos/CSS Advanced/1.png" alt="smiling face">
                         <h3>Phillip Massey</h3>
                         <p>« Smile of the year » 2018 - 2019</p>
                     </div>
                     <div>
-                        <img src="./images/6.png" alt="">
+                        <img src="photos/CSS Advanced/3.png" alt="little smile">
                         <h3>Nannie Lawrence</h3>
                         <p>Best « little smile » 2017</p>
                     </div>
                     <div>
-                        <img src="./images/7.png" alt="">
+                        <img src="photos/CSS Advanced/2.png" alt="friend smile">
                         <h3>Bruce Walters</h3>
                         <p>Best « Friend Smile » live performance 2019</p>
                     </div>
                     <div>
-                        <img src="./images/8.png" alt="">
+                        <img src="photos/CSS Advanced/4.png" alt="24th smiles">
                         <h3>Henry Hughes</h3>
                         <p>« 24h smiles » winner 2016 - 2019</p>
                     </div>
@@ -56,7 +56,7 @@
         </section>
         <section>
             <div>
-                <img src="./images/Bitmap.png" alt="image">
+                <img src="photos/CSS Advanced/5.png" alt="image">
             </div>
             <div>
                 <blockquote>« Those tutorials are concise and go straight to the point. I can’t think of a better place to learn smiling. And it’s so fun!</blockquote>
@@ -67,11 +67,11 @@
         <section>
             <h2>Most popular tutorials</h2>
             <div>
-                <img src="./images/Bitmap (1).png" alt="">
+                <img src="photos/CSS Advanced/9.png" alt="image">
                 <h3>Diagonal Smile</h3>
                 <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
                 <div>
-                    <img src="./images/1 (3).png" alt="">
+                    <img src="photos/CSS Advanced/1.png" alt="image">
                     <h4>Phillip Massey</h4>
                 </div>
                 <div>
@@ -84,11 +84,11 @@
                 <p>8 min</p>
             </div>
             <div>
-                <img src="./images/Bitmap (4).png" alt="">
+                <img src="photos/CSS Advanced/6.png" alt="image">
                 <h3>Happy Smile</h3>
                 <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
                 <div>
-                    <img src="./images/1 (3).png" alt="">
+                    <img src="photos/CSS Advanced/1.png" alt="image">
                     <h4>Phillip Massey</h4>
                 </div>
                 <div>
@@ -101,11 +101,11 @@
                 <p>8 min</p>
             </div>
             <div>
-                <img src="./images/Bitmap (3).png" alt="">
+                <img src="photos/CSS Advanced/8.png" alt="image">
                 <h3>Natural Smile</h3>
                 <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
                 <div>
-                    <img src="./images/1 (3).png" alt="">
+                    <img src="photos/CSS Advanced/1.png" alt="image">
                     <h4>Phillip Massey</h4>
                 </div>
                 <div>
@@ -118,11 +118,11 @@
                 <p>8 min</p>
             </div>
             <div>
-                <img src="./images/Bitmap (2).png" alt="">
+                <img src="photos/CSS Advanced/7.png" alt="image">
                 <h3>Sad Smile</h3>
                 <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
                 <div>
-                    <img src="./images/1 (3).png" alt="">
+                    <img src="photos/CSS Advanced/1.png" alt="">
                     <h4>Phillip Massey</h4>
                 </div>
                 <div>
@@ -138,22 +138,22 @@
         <section>
             <h2>Free membership</h2>
             <div>
-                <img src="./images/smile.svg" alt="">
+                <img src="photos/CSS Advanced/smile.png" alt="image">
                 <h3>Lorem Ipsum</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             </div>
             <div>
-                <img src="./images/smile.svg" alt="">
+                <img src="photos/CSS Advanced/smile.png" alt="image">
                 <h3>Lorem Ipsum</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             </div>
             <div>
-                <img src="./images/smile.svg" alt="">
+                <img src="photos/CSS Advanced/smile.png" alt="image">
                 <h3>Lorem Ipsum</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             </div>
             <div>
-                <img src="./images/smile.svg" alt="">
+                <img src="photos/CSS Advanced/smile.png" alt="image">
                 <h3>Lorem Ipsum</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             </div>
@@ -197,7 +197,7 @@
     <footer>
         <section>
             <div>
-                <img src="https://fakeimg.pl/250x250?text=Sample+Logo" alt="logo">
+                <img src="photos/CSS Advanced/logo.png" alt="logo">
                 <div>
                     <i class="fa-brands fa-facebook"></i>
                     <i class="fa-brands fa-twitter"></i>
