updated html file

--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -57,84 +57,95 @@
             </div>
         </section>
         <section class="quote">
-            <div class="quotes">
+            <div>
                 <img src="photos/CSS Advanced/5.png" alt="image">
             </div>
-            <div>
-                <blockquote>« Those tutorials are concise and go straight to the point. I can’t think of a better place to learn smiling. And it’s so fun!</blockquote>
-                <h3>NAME</h3>
-                <P>weather presenter</P>
+            <div class="quotes">
+                <blockquote>« Those tutorials are concise and go straight to the point. I can’t think of a better place to learn smiling. And it’s so fun!    
+                </blockquote>
+                <div class="quote-author">
+                    <span class="author-name"><h3>Person name</h3></span>
+                    <span class="author-title"><P>weather presenter</P></span>
+                </div>
             </div>
         </section>
-        <section>
+        <section class="tutorials">
             <h2>Most popular tutorials</h2>
             <div>
                 <img src="photos/CSS Advanced/9.png" alt="image">
-                <h3>Diagonal Smile</h3>
-                <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
-                <div>
+                 <div>
+                    <h3>Diagonal Smile</h3>
+                    <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
+                  </div>
+                 <div>
                     <img src="photos/CSS Advanced/1.png" alt="image">
                     <h4>Phillip Massey</h4>
-                </div>
-                <div>
+                 </div>
+                 <div>
                     <div><i class="fa-solid fa-star"></i></div>
                     <div><i class="fa-solid fa-star"></i></div>
                     <div><i class="fa-solid fa-star"></i></div>
                     <div><i class="fa-solid fa-star"></i></div>
                     <div><i class="fa-solid fa-star"></i></div>
-                </div>
-                <p>8 min</p>
-            </div>
-            <div>
-                <img src="photos/CSS Advanced/6.png" alt="image">
-                <h3>Happy Smile</h3>
-                <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
-                <div>
+                 </div>
+                 <p>8 min</p>
+                 </div>
+                 <div>
+                 <img src="photos/CSS Advanced/6.png" alt="image">
+                 <div>
+                    <h3>Happy Smile</h3>
+                 <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
+                 </div>
+                 <div>
                     <img src="photos/CSS Advanced/1.png" alt="image">
                     <h4>Phillip Massey</h4>
-                </div>
-                <div>
+                 </div>
+                 <div>
                     <div><i class="fa-solid fa-star"></i></div>
                     <div><i class="fa-solid fa-star"></i></div>
                     <div><i class="fa-solid fa-star"></i></div>
                     <div><i class="fa-solid fa-star"></i></div>
                     <div><i class="fa-solid fa-star"></i></div>
-                </div>
-                <p>8 min</p>
-            </div>
-            <div>
-                <img src="photos/CSS Advanced/8.png" alt="image">
-                <h3>Natural Smile</h3>
-                <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
-                <div>
+                 </div>
+                  <p>8 min</p>
+                 </div>
+                 <div>
+                 <img src="photos/CSS Advanced/8.png" alt="image">
+                 <div>
+                    <h3>Natural Smile</h3>
+                 <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
+                 </div>
+                 <div>
                     <img src="photos/CSS Advanced/1.png" alt="image">
                     <h4>Phillip Massey</h4>
-                </div>
-                <div>
+                 </div>
+                 <div>
                     <div><i class="fa-solid fa-star"></i></div>
                     <div><i class="fa-solid fa-star"></i></div>
                     <div><i class="fa-solid fa-star"></i></div>
                     <div><i class="fa-solid fa-star"></i></div>
                     <div><i class="fa-solid fa-star"></i></div>
-                </div>
-                <p>8 min</p>
-            </div>
-            <div>
-                <img src="photos/CSS Advanced/7.png" alt="image">
-                <h3>Sad Smile</h3>
-                <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
-                <div>
+                 </div>
+                 <p>8 min</p>
+                 </div>
+                 <div>
+                 <img src="photos/CSS Advanced/7.png" alt="image">
+                 <div>
+                    <h3>Sad Smile</h3>
+                 <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
+                 </div>
+                 <div>
                     <img src="photos/CSS Advanced/1.png" alt="">
                     <h4>Phillip Massey</h4>
-                </div>
-                <div>
+                 </div>
+                 <div>
                     <div><i class="fa-solid fa-star"></i></div>
                     <div><i class="fa-solid fa-star"></i></div>
                     <div><i class="fa-solid fa-star"></i></div>
                     <div><i class="fa-solid fa-star"></i></div>
                     <div><i class="fa-solid fa-star"></i></div>
-                </div>
-                <p>8 min</p>
+                 </div>
+                 <p>8 min</p>
             </div>
         </section>
         <section>
