--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -73,26 +73,26 @@
             <h2>Most popular tutorials</h2>
             <div>
                 <img src="photos/CSS Advanced/9.png" alt="image">
-                 <div>
+                 <div class="tutorial-category">
                     <h3>Diagonal Smile</h3>
                     <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
                   </div>
-                 <div>
+                 <div class="tutorial-card">
                     <img src="photos/CSS Advanced/1.png" alt="image">
                     <h4>Phillip Massey</h4>
                  </div>
-                 <div>
+                 <div class="tutorial-card">
                     <div><i class="fa-solid fa-star"></i></div>
                     <div><i class="fa-solid fa-star"></i></div>
                     <div><i class="fa-solid fa-star"></i></div>
                     <div><i class="fa-solid fa-star"></i></div>
                     <div><i class="fa-solid fa-star"></i></div>
                  </div>
-                 <p>8 min</p>
+                 <p class="duration">8 min</p>
                  </div>
                  <div>
                  <img src="photos/CSS Advanced/6.png" alt="image">
-                 <div>
+                 <div class="tutorial-category">
                     <h3>Happy Smile</h3>
                  <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
                  </div>
@@ -100,124 +100,124 @@
                     <img src="photos/CSS Advanced/1.png" alt="image">
                     <h4>Phillip Massey</h4>
                  </div>
-                 <div>
+                 <div class="tutorial-card">
                     <div><i class="fa-solid fa-star"></i></div>
                     <div><i class="fa-solid fa-star"></i></div>
                     <div><i class="fa-solid fa-star"></i></div>
                     <div><i class="fa-solid fa-star"></i></div>
                     <div><i class="fa-solid fa-star"></i></div>
                  </div>
-                  <p>8 min</p>
+                  <p class="duration">8 min</p>
                  </div>
                  <div>
                  <img src="photos/CSS Advanced/8.png" alt="image">
-                 <div>
+                 <div class="tutorial-category">
                     <h3>Natural Smile</h3>
                  <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
                  </div>
-                 <div>
+                 <div class="tutorial-card">
                     <img src="photos/CSS Advanced/1.png" alt="image">
                     <h4>Phillip Massey</h4>
                  </div>
-                 <div>
+                 <div class="tutorial-card">
                     <div><i class="fa-solid fa-star"></i></div>
                     <div><i class="fa-solid fa-star"></i></div>
                     <div><i class="fa-solid fa-star"></i></div>
                     <div><i class="fa-solid fa-star"></i></div>
                     <div><i class="fa-solid fa-star"></i></div>
                  </div>
-                 <p>8 min</p>
+                 <p class="duration">8 min</p>
                  </div>
                  <div>
                  <img src="photos/CSS Advanced/7.png" alt="image">
-                 <div>
+                 <div class="tutorial-category">
                     <h3>Sad Smile</h3>
                  <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
                  </div>
-                 <div>
+                 <div class="tutorial-card">
                     <img src="photos/CSS Advanced/1.png" alt="">
                     <h4>Phillip Massey</h4>
                  </div>
-                 <div>
+                 <div class="tutorial-card">
                     <div><i class="fa-solid fa-star"></i></div>
                     <div><i class="fa-solid fa-star"></i></div>
                     <div><i class="fa-solid fa-star"></i></div>
                     <div><i class="fa-solid fa-star"></i></div>
                     <div><i class="fa-solid fa-star"></i></div>
                  </div>
-                 <p>8 min</p>
+                 <p class="duration">8 min</p>
             </div>
         </section>
-        <section>
-            <h2>Free membership</h2>
-            <div>
+        <section class="membership">
+            <h2 class="member">Free membership</h2>
+            <div class="membership-items">
                 <img src="photos/CSS Advanced/smile.png" alt="image">
                 <h3>Lorem Ipsum</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            </div>
-            <div>
+             </div>
+             <div>
                 <img src="photos/CSS Advanced/smile.png" alt="image">
                 <h3>Lorem Ipsum</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            </div>
-            <div>
+             </div>
+             <div>
                 <img src="photos/CSS Advanced/smile.png" alt="image">
                 <h3>Lorem Ipsum</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            </div>
-            <div>
+             </div>
+             <div>
                 <img src="photos/CSS Advanced/smile.png" alt="image">
                 <h3>Lorem Ipsum</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             </div>
             <button>REGISTER FOR FREE</button>
         </section>
-        <section>
-            <h2>F.A.Q</h2>
-            <div>
-                <div>
-                    <div>
+        <section class="faq-section">
+            <h2 class="faq-heading">F.A.Q</h2>
+            <div class="faq-columns">
+                <div class="faq-column">
+                     <div class="faq-item" >
                         <h3>How does this work?</h3>
-                    </div>
-                    <div>
+                     </div>
+                     <div>
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                    </div>
+                     </div>
 
-                    <div>
+                     <div class="faq-item" >
                         <h3>How does this work?</h3>
-                    </div>
-                    <div>
+                     </div>
+                     <div>
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                    </div>
-                </div>
-                <div>
-                    <div>
+                     </div>
+                 </div>
+                <div class="faq-column">
+                    <div class="faq-item" >
                         <h3>How does this work?</h3>
-                    </div>
-                    <div>
+                     </div>
+                     <div>
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                    </div>
-                    <div>
+                     </div>
+                     <div class="faq-item">
                         <h3>How does this work?</h3>
-                    </div>
-                    <div>
+                     </div>
+                     <div>
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                     </div>
                 </div>
             </div>
         </section>
     </main>
-    <footer>
-        <section>
-            <div>
+    <footer class="footer" >
+        <section class="footer-content" >
+            <div class="footer-top">
                 <img src="photos/CSS Advanced/logo.png" alt="logo">
-                <div>
+                <div class="footer-socials" >
                     <i class="fa-brands fa-facebook"></i>
                     <i class="fa-brands fa-twitter"></i>
                     <i class="fa-brands fa-instagram"></i>
                 </div>
             </div>
-            <p>©smileschool 2020</p>
+            <p class="footer-copy">©smileschool 2020</p>
         </section>
     </footer>
 </body>
