--- a/headphones/1-index.html
+++ b/headphones/1-index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web page</title>
-    <link href="0-styles.css" rel="stylesheet">
+    <link rel="stylesheet" href="holberton_school-icon.css">
+    <link href="1-styles.css" rel="stylesheet">
 </head>
 <body>
     <section class=" hero">
@@ -26,6 +27,33 @@
          </div>
      </div>
     </section>
+    
+  <section class="what-we-do">
+  <h2>What we do…</h2>
+  <div class="what-we-do-container">
+
+    <div class="what-card">
+      <span class="holberton_school-icon-ic_sound icon"></span>
+      <h3>Music & Sound</h3>
+      <p>We create amazing sound experiences for learning and entertainment.</p>
+    </div>
+
+    <div class="what-card">
+      <span class="holberton_school-icon-ic_code icon"></span>
+      <h3>Software Development</h3>
+      <p>We build high-quality software tailored to our community’s needs.</p>
+    </div>
+
+    <div class="what-card">
+      <span class="holberton_school-icon-ic_video icon"></span>
+      <h3>Video Production</h3>
+      <p>We produce engaging video content for education and outreach.</p>
+    </div>
+
+  </div>
+</section>
+
+
     
 </body>
 </html>
